@@ -1,5 +1,7 @@
 package net.sourceforge.cruisecontrol.dashboard.saxhandler;
 
+import java.text.NumberFormat;
+import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -61,7 +63,13 @@ public class TestSuiteExtractor extends SAXBasedExtractor {
 
     private BuildTestSuite createSingleTestSuite(Attributes attributes) {
         String name = attributes.getValue("name");
-        float duration = Float.parseFloat(StringUtils.defaultString(attributes.getValue("time"), "0.0"));
+        float duration;
+        try {
+            NumberFormat format = NumberFormat.getInstance();
+            duration = format.parse(StringUtils.defaultString(attributes.getValue("time"), "0.0")).floatValue();
+        } catch (ParseException e) {
+            duration = (float) 0.0;
+        }
         int tests = Integer.parseInt(StringUtils.defaultString(attributes.getValue("tests"), "0"));
         int failures = Integer.parseInt(StringUtils.defaultString(attributes.getValue("failures"), "0"));
         int errors = Integer.parseInt(StringUtils.defaultString(attributes.getValue("errors"), "0"));
